# jutils

./: .doxyfile  CMakeLists.txt  Doxyfile  Readme.md  license.txt
cmake/: jutilsConfig.cmake.in  jutilsTargetFunctions.cmake
docs/: kdtrie.md  logging.md  sparse_gpr.md
include/: matplotlib.h
include/jutils/: array.hpp  cuda_interface.hpp  kdtrie.hpp  logging.hpp  multi_array.hpp  parallel.cpp  shared_ptr.hpp  sparse_gpr.hpp  tensor_array.hpp  threadpool.hpp  time.hpp
include/jutils_testing/: interopable_test_runner.hpp
src/: gpr_test.cpp  kdtrie_test.cpp  logging.cpp  logging_test.cpp  sparse_gpr_test.cpp  threadpool_test.cpp  time_test.cpp
tests/: cuda_interface.cpp  cuda_interface_no_cuda.cpp
